--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       background-color: #ffffff;
       color: #2c3e50;
     }
+    <header style="text-align: center; margin: 20px 0;">
+  <img src="logo1.png" alt="Logo de Viazura" style="height: 100px;">
+</header>
     header {
       background-color: #e0f7fa;
       padding: 2rem;
